--- a/projekt.ipynb
+++ b/projekt.ipynb
@@ -9,7 +9,7 @@
     "### Paulina Kowalik\n",
     "#### 24.03.19\n",
     "\n",
-    "To run the project, you need pandas, matplotlib and seaborn. I used the newest versions available on 24.04.19. \n",
+    "To run the project, you need pandas, matplotlib, seaborn and plotly. I used the newest versions available on 24.04.19. \n",
     "\n",
     "You also need to download the dataset, Global Terrorism Database, from https://www.kaggle.com/START-UMD/gtd, and place it in the directory above your repository. I used the *globalterrorismdb_0718dist.csv file*. \n",
     "\n",
